--- a/app/views/checkins/show.html.erb
+++ b/app/views/checkins/show.html.erb
@@ -16,6 +16,11 @@
 </p>
 
 <p>
+  <strong>State:</strong>
+  <%= @checkin.state %>
+</p>
+
+<p>
   <strong>Purpose:</strong>
   <%= @checkin.purpose %>
 </p>
