--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
          <%= link_to "Store", items_url %> 
       </li>
       <li>
-         <%= link_to "Check Out", checkins_url %> 
+         <%= link_to "Check Out", checkouts_url %> 
       </li>
     </ul>
   </div>
