--- a/app/views/checkouts/_form.html.erb
+++ b/app/views/checkouts/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.date_select :dateOut %>
   </div>
   <div class="field">
-    <%= f.label :serial_no %><br>
+    <%= f.label :serial_no, "Serial No" %><br>
     <%= f.text_field :serial_no %>
   </div>
   <div class="field">
