--- a/app/views/checkouts/index.html.erb
+++ b/app/views/checkouts/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Date</th>
+      <th>Date Sent</th>
       <th>Name</th>
       <th>State</th>
       <th>Destination</th>
@@ -22,7 +22,11 @@
     <% @checkouts.each do |checkout| %>
       <tr>
         <td><%= checkout.dateOut %></td>
-        <td><%= "Item Name" %></td>
+        <% if !checkout.checkin.nil? %>
+          <td><%= checkout.checkin.item.name.capitalize %></td>
+        <% else %>
+          <td><%= "No Name" %></td>
+        <% end %>
         <td><%= checkout.state %></td>
         <td><%= checkout.destination %></td>
         <td><%= checkout.purpose %></td>
@@ -30,9 +34,9 @@
         <td><%= checkout.dispatchedBy %></td>
         <td><%= checkout.receivedBy %></td>
         <td><%= checkout.waybillNo %></td>
-        <td><%= link_to 'Show', checkout %></td>
-        <td><%= link_to 'Edit', edit_checkout_path(checkout) %></td>
-        <td><%= link_to 'Destroy', checkout, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show ', checkout %></td>
+        <td><%= link_to ' Edit', edit_checkout_path(checkout) %></td>
+        <td><%= link_to ' Destroy', checkout, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
